k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/jannikfg/cloudnativedevelopment2023/frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8084
      imagePullSecrets:
        - name: ghcr-login-secret
