k8s/postgres-userservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-userservice
spec:
  selector:
    matchLabels:
      app: postgres-userservice
  template:
    metadata:
      labels:
        app: postgres-userservice
    spec:
      containers:
        - name: postgres-userservice
          imagePullPolicy: IfNotPresent
          image: postgres:15.1-alpine
          resources:
            requests:
              memory: "128Mi"
              cpu: "200m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-userservice-volume
          ports:
            - containerPort: 5432
      volumes:
        - name: postgres-userservice-volume
          emptyDir:
            sizeLimit: 500Mi
