k8s/userservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userservice
  labels:
    app: userservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userservice
  template:
    metadata:
      labels:
        app: userservice
    spec:
      containers:
        - name: userservice
          image: ghcr.io/jannikfg/cloudnativedevelopment2023/userservice:latest
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: ghcr-login-secret
