k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  ports:
    - port: 8084
      protocol: TCP
      targetPort: 8084
  selector:
    app: frontend
  type: ClusterIP
