k8s/minio.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minio
spec:
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: minio
          imagePullPolicy: IfNotPresent
          image: ghcr.io/jannikfg/cloudnativedevelopment2023/minio:latest
          resources:
            requests:
              memory: "128Mi"
              cpu: "200m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          volumeMounts:
            - mountPath: /data
              name: minio-volume
          ports:
            - containerPort: 9000
              name: app
            - containerPort: 9090
              name: console
      volumes:
        - name: minio-volume
          emptyDir:
            sizeLimit: 500Mi
---
apiVersion: v1
kind: Service
metadata:
  name: minio
spec:
  selector:
    app: minio
  ports:
    - port: 9000
      targetPort: app
    - port: 9090
      targetPort: console
