k8s/postgres-bookingservice.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-bookingservice
spec:
  selector:
    matchLabels:
      app: postgres-bookingservice
  template:
    metadata:
      labels:
        app: postgres-bookingservice
    spec:
      containers:
        - name: postgres-bookingservice
          imagePullPolicy: IfNotPresent
          image: postgres:15.1-alpine
          resources:
            requests:
              memory: "128Mi"
              cpu: "200m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-bookingservice-volume
          ports:
            - containerPort: 5432
              name: app
      volumes:
        - name: postgres-bookingservice-volume
          emptyDir:
            sizeLimit: 500Mi
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-bookingservice
spec:
  selector:
    app: postgres-bookingservice
  ports:
    - port: 5432
      targetPort: app
