k8s/postgres-userservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-userservice
spec:
  selector:
    app: postgres-userservice
  ports:
    - port: 5432
      targetPort: 5432
