k8s/userservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: userservice
  labels:
    app: userservice
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: userservice
  type: ClusterIP
