k8s/imageservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: imageservice
  labels:
    app: imageservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: imageservice
  template:
    metadata:
      labels:
        app: imageservice
    spec:
      containers:
        - name: imageservice
          image: ghcr.io/jannikfg/cloudnativedevelopment2023/imageservice:latest
          ports:
            - containerPort: 3000
              name: app
      imagePullSecrets:
        - name: ghcr-login-secret
---
apiVersion: v1
kind: Service
metadata:
  name: imageservice
  labels:
    app: imageservice
spec:
  ports:
    - port: 80
      name: app
      protocol: TCP
      targetPort: app
  selector:
    app: imageservice
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: imageservice
  labels:
    app: imageservice
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /api/v1/images
            pathType: Prefix
            backend:
              service:
                name: imageservice
                port:
                  name: app
