k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  labels:
    name: ingress
spec:
  # see ingress-setup kind: IngressClass
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - pathType: "Prefix"
            path: /
            backend:
              service:
                name: frontend
                port:
                  number: 8084
