k8s/userservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userservice
  labels:
    app: userservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userservice
  template:
    metadata:
      labels:
        app: userservice
    spec:
      containers:
        - name: userservice
          image: ghcr.io/jannikfg/cloudnativedevelopment2023/userservice:latest
          ports:
            - containerPort: 8081
              name: app
      imagePullSecrets:
        - name: ghcr-login-secret
---
apiVersion: v1
kind: Service
metadata:
  name: userservice
  labels:
    app: userservice
spec:
  ports:
    - port: 80
      name: app
      protocol: TCP
      targetPort: app
  selector:
    app: userservice
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: userservice
  labels:
    app: userservice
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /api/v1/users
            pathType: Prefix
            backend:
              service:
                name: userservice
                port:
                  name: app
